lab3/y.output
状态 1 conflicts: 1 shift/reduce
状态 9 conflicts: 3 shift/reduce, 1 reduce/reduce
状态 28 conflicts: 3 shift/reduce, 1 reduce/reduce
状态 31 conflicts: 1 shift/reduce
状态 33 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | INT
    5    | STRING
    6    | ID LPAREN params RPAREN
    7    | exp PLUS exp
    8    | exp MINUS exp
    9    | exp TIMES exp
   10    | exp DIVIDE exp
   11    | exp EQ exp
   12    | exp NEQ exp
   13    | exp LT exp
   14    | exp LE exp
   15    | exp GT exp
   16    | exp GE exp
   17    | MINUS exp
   18    | ID LBRACE records RBRACE
   19    | LPAREN exp RPAREN
   20    | LPAREN expseq RPAREN
   21    | lvalue ASSIGN exp
   22    | IF exp THEN exp ELSE exp
   23    | IF exp THEN exp
   24    | WHILE exp DO exp
   25    | BREAK
   26    | FOR ID ASSIGN exp TO exp DO exp
   27    | LET decs IN sequencing_exps END
   28    | ID LBRACK exp RBRACK OF exp
   29    | exp AND exp
   30    | exp OR exp

   31 lvalue: ID
   32       | lvalue DOT ID
   33       | lvalue LBRACK exp RBRACK
   34       | ID LBRACK exp RBRACK

   35 params: %empty
   36       | param

   37 param: exp
   38      | exp COMMA param

   39 records: %empty
   40        | record

   41 record: ID EQ exp
   42       | ID EQ exp COMMA record

   43 sequencing_exps: %empty
   44                | sequencing

   45 sequencing: exp
   46           | exp SEMICOLON sequencing

   47 expseq: exp SEMICOLON exp
   48       | exp SEMICOLON exp SEMICOLON sequencing

   49 decs: %empty
   50     | dec decs

   51 dec: funcdecs
   52    | vardec
   53    | typedecs

   54 vardec: VAR ID ASSIGN exp
   55       | VAR ID COLON ID ASSIGN exp

   56 funcdecs: %empty
   57         | funcdec funcdecs

   58 funcdec: FUNCTION ID LPAREN typefields RPAREN EQ exp
   59        | FUNCTION ID LPAREN typefields RPAREN COLON ID EQ exp

   60 typedecs: typedec
   61         | typedec typedecs

   62 typedec: TYPE ID EQ ty

   63 ty: ID
   64   | LBRACE typefields RBRACE
   65   | ARRAY OF ID

   66 typefields: %empty
   67           | typefield

   68 typefield: ID COLON ID
   69          | ID COLON ID COMMA typefield


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 6 18 26 28 31 32 34 41 42 54 55 58 59 62 63 65 68 69
STRING (259) 5
INT (260) 4
COMMA (261) 38 42 69
COLON (262) 55 59 68 69
SEMICOLON (263) 46 47 48
LPAREN (264) 6 19 20 58 59
RPAREN (265) 6 19 20 58 59
LBRACK (266) 28 33 34
RBRACK (267) 28 33 34
LBRACE (268) 18 64
RBRACE (269) 18 64
DOT (270) 32
PLUS (271) 7
MINUS (272) 8 17
TIMES (273) 9
DIVIDE (274) 10
EQ (275) 11 41 42 58 59 62
NEQ (276) 12
LT (277) 13
LE (278) 14
GT (279) 15
GE (280) 16
UMINUS (281)
AND (282) 29
OR (283) 30
ASSIGN (284) 21 26 54 55
ARRAY (285) 65
IF (286) 22 23
THEN (287) 22 23
ELSE (288) 22
WHILE (289) 24
FOR (290) 26
TO (291) 26
DO (292) 24 26
LET (293) 27
IN (294) 27
END (295) 27
OF (296) 28 65
BREAK (297) 25
NIL (298) 3
FUNCTION (299) 58 59
VAR (300) 54 55
TYPE (301) 62


Nonterminals, with rules where they appear

$accept (47)
    左： 0
program (48)
    左： 1, 右： 0
exp (49)
    左： 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30, 右： 1 7 8 9 10 11 12 13 14 15 16 17 19
    21 22 23 24 26 28 29 30 33 34 37 38 41 42 45 46 47 48 54 55 58
    59
lvalue (50)
    左： 31 32 33 34, 右： 2 21 32 33
params (51)
    左： 35 36, 右： 6
param (52)
    左： 37 38, 右： 36 38
records (53)
    左： 39 40, 右： 18
record (54)
    左： 41 42, 右： 40 42
sequencing_exps (55)
    左： 43 44, 右： 27
sequencing (56)
    左： 45 46, 右： 44 46 48
expseq (57)
    左： 47 48, 右： 20
decs (58)
    左： 49 50, 右： 27 50
dec (59)
    左： 51 52 53, 右： 50
vardec (60)
    左： 54 55, 右： 52
funcdecs (61)
    左： 56 57, 右： 51 57
funcdec (62)
    左： 58 59, 右： 57
typedecs (63)
    左： 60 61, 右： 53 61
typedec (64)
    左： 62, 右： 60 61
ty (65)
    左： 63 64 65, 右： 62
typefields (66)
    左： 66 67, 右： 58 59 64
typefield (67)
    左： 68 69, 右： 67 69


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  转到状态 12
    exp      转到状态 13
    lvalue   转到状态 14


State 1

    6 exp: ID . LPAREN params RPAREN
   18    | ID . LBRACE records RBRACE
   28    | ID . LBRACK exp RBRACK OF exp
   31 lvalue: ID .
   34       | ID . LBRACK exp RBRACK

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    LBRACK    [reduce using rule 31 (lvalue)]
    $default  reduce using rule 31 (lvalue)


State 2

    5 exp: STRING .

    $default  reduce using rule 5 (exp)


State 3

    4 exp: INT .

    $default  reduce using rule 4 (exp)


State 4

   19 exp: LPAREN . exp RPAREN
   20    | LPAREN . expseq RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 18
    lvalue  转到状态 14
    expseq  转到状态 19


State 5

   17 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 20
    lvalue  转到状态 14


State 6

   22 exp: IF . exp THEN exp ELSE exp
   23    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 21
    lvalue  转到状态 14


State 7

   24 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 22
    lvalue  转到状态 14


State 8

   26 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 23


State 9

   27 exp: LET . decs IN sequencing_exps END

    FUNCTION  shift, and go to state 24
    VAR       shift, and go to state 25
    TYPE      shift, and go to state 26

    IN        reduce using rule 49 (decs)
    IN        [reduce using rule 56 (funcdecs)]
    FUNCTION  [reduce using rule 56 (funcdecs)]
    VAR       [reduce using rule 56 (funcdecs)]
    TYPE      [reduce using rule 56 (funcdecs)]
    $default  reduce using rule 49 (decs)

    decs      转到状态 27
    dec       转到状态 28
    vardec    转到状态 29
    funcdecs  转到状态 30
    funcdec   转到状态 31
    typedecs  转到状态 32
    typedec   转到状态 33


State 10

   25 exp: BREAK .

    $default  reduce using rule 25 (exp)


State 11

    3 exp: NIL .

    $default  reduce using rule 3 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 34


State 13

    1 program: exp .
    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   29    | exp . AND exp
   30    | exp . OR exp

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46

    $default  reduce using rule 1 (program)


State 14

    2 exp: lvalue .
   21    | lvalue . ASSIGN exp
   32 lvalue: lvalue . DOT ID
   33       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 47
    DOT     shift, and go to state 48
    ASSIGN  shift, and go to state 49

    $default  reduce using rule 2 (exp)


State 15

    6 exp: ID LPAREN . params RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 35 (params)

    exp     转到状态 50
    lvalue  转到状态 14
    params  转到状态 51
    param   转到状态 52


State 16

   28 exp: ID LBRACK . exp RBRACK OF exp
   34 lvalue: ID LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 53
    lvalue  转到状态 14


State 17

   18 exp: ID LBRACE . records RBRACE

    ID  shift, and go to state 54

    $default  reduce using rule 39 (records)

    records  转到状态 55
    record   转到状态 56


State 18

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   19    | LPAREN exp . RPAREN
   29    | exp . AND exp
   30    | exp . OR exp
   47 expseq: exp . SEMICOLON exp
   48       | exp . SEMICOLON exp SEMICOLON sequencing

    SEMICOLON  shift, and go to state 57
    RPAREN     shift, and go to state 58
    PLUS       shift, and go to state 35
    MINUS      shift, and go to state 36
    TIMES      shift, and go to state 37
    DIVIDE     shift, and go to state 38
    EQ         shift, and go to state 39
    NEQ        shift, and go to state 40
    LT         shift, and go to state 41
    LE         shift, and go to state 42
    GT         shift, and go to state 43
    GE         shift, and go to state 44
    AND        shift, and go to state 45
    OR         shift, and go to state 46


State 19

   20 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 59


State 20

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   17    | MINUS exp .
   29    | exp . AND exp
   30    | exp . OR exp

    $default  reduce using rule 17 (exp)


State 21

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   22    | IF exp . THEN exp ELSE exp
   23    | IF exp . THEN exp
   29    | exp . AND exp
   30    | exp . OR exp

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46
    THEN    shift, and go to state 60


State 22

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   24    | WHILE exp . DO exp
   29    | exp . AND exp
   30    | exp . OR exp

    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46
    DO      shift, and go to state 61


State 23

   26 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 62


State 24

   58 funcdec: FUNCTION . ID LPAREN typefields RPAREN EQ exp
   59        | FUNCTION . ID LPAREN typefields RPAREN COLON ID EQ exp

    ID  shift, and go to state 63


State 25

   54 vardec: VAR . ID ASSIGN exp
   55       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 64


State 26

   62 typedec: TYPE . ID EQ ty

    ID  shift, and go to state 65


State 27

   27 exp: LET decs . IN sequencing_exps END

    IN  shift, and go to state 66


State 28

   50 decs: dec . decs

    FUNCTION  shift, and go to state 24
    VAR       shift, and go to state 25
    TYPE      shift, and go to state 26

    IN        reduce using rule 49 (decs)
    IN        [reduce using rule 56 (funcdecs)]
    FUNCTION  [reduce using rule 56 (funcdecs)]
    VAR       [reduce using rule 56 (funcdecs)]
    TYPE      [reduce using rule 56 (funcdecs)]
    $default  reduce using rule 49 (decs)

    decs      转到状态 67
    dec       转到状态 28
    vardec    转到状态 29
    funcdecs  转到状态 30
    funcdec   转到状态 31
    typedecs  转到状态 32
    typedec   转到状态 33


State 29

   52 dec: vardec .

    $default  reduce using rule 52 (dec)


State 30

   51 dec: funcdecs .

    $default  reduce using rule 51 (dec)


State 31

   57 funcdecs: funcdec . funcdecs

    FUNCTION  shift, and go to state 24

    FUNCTION  [reduce using rule 56 (funcdecs)]
    $default  reduce using rule 56 (funcdecs)

    funcdecs  转到状态 68
    funcdec   转到状态 31


State 32

   53 dec: typedecs .

    $default  reduce using rule 53 (dec)


State 33

   60 typedecs: typedec .
   61         | typedec . typedecs

    TYPE  shift, and go to state 26

    TYPE      [reduce using rule 60 (typedecs)]
    $default  reduce using rule 60 (typedecs)

    typedecs  转到状态 69
    typedec   转到状态 33


State 34

    0 $accept: program $end .

    $default  接受


State 35

    7 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 70
    lvalue  转到状态 14


State 36

    8 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 71
    lvalue  转到状态 14


State 37

    9 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 72
    lvalue  转到状态 14


State 38

   10 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 73
    lvalue  转到状态 14


State 39

   11 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 74
    lvalue  转到状态 14


State 40

   12 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 75
    lvalue  转到状态 14


State 41

   13 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 76
    lvalue  转到状态 14


State 42

   14 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 77
    lvalue  转到状态 14


State 43

   15 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 78
    lvalue  转到状态 14


State 44

   16 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 79
    lvalue  转到状态 14


State 45

   29 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 80
    lvalue  转到状态 14


State 46

   30 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 81
    lvalue  转到状态 14


State 47

   33 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 82
    lvalue  转到状态 14


State 48

   32 lvalue: lvalue DOT . ID

    ID  shift, and go to state 83


State 49

   21 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 84
    lvalue  转到状态 14


State 50

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   29    | exp . AND exp
   30    | exp . OR exp
   37 param: exp .
   38      | exp . COMMA param

    COMMA   shift, and go to state 85
    PLUS    shift, and go to state 35
    MINUS   shift, and go to state 36
    TIMES   shift, and go to state 37
    DIVIDE  shift, and go to state 38
    EQ      shift, and go to state 39
    NEQ     shift, and go to state 40
    LT      shift, and go to state 41
    LE      shift, and go to state 42
    GT      shift, and go to state 43
    GE      shift, and go to state 44
    AND     shift, and go to state 45
    OR      shift, and go to state 46

    $default  reduce using rule 37 (param)


State 51

    6 exp: ID LPAREN params . RPAREN

    RPAREN  shift, and go to state 86


State 52

   36 params: param .

    $default  reduce using rule 36 (params)


State 53

    7 exp: exp . PLUS exp
    8    | exp . MINUS exp
    9    | exp . TIMES exp
   10    | exp . DIVIDE exp
   11    | exp . EQ exp
   12    | exp . NEQ exp
   13    | exp . LT exp
   14    | exp . LE exp
   15    | exp . GT exp
   16    | exp . GE exp
   28    | ID LBRACK exp . RBRACK OF exp
   29    | exp . AND exp
   30    | exp . OR exp
   34 lvalue: ID LBRACK exp . RBRACK
